tests/invalid/ListSublist_Invalid_3.whiley
method main() -> [int]:
    [int] list = [1, 2, 3]
    return list[2..x]
